5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1756_674.log
== TEST (2019-05-22 14:52:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n= int(eval(input("numero:")))
#Quantidade de elementos do vetor;
print(size(n))
#Primeiro elemento do vetor;
print(n[0])
#Último elemento do vetor;
print(n[-1])
#Maior elemento do vetor;
print(max(n))
#Menor elemento do vetor;
print(min(n))
#Soma dos elementos do vetor;
print(sum(n))
#Média aritmética dos elementos do vetor, com até duas casas decimais de precisão.
print(round(sum(n)/size(n),2)
-- ERROR:
File "XXXX", line 19
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:52:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n= int(eval(input("numero:")))
#Quantidade de elementos do vetor;
print(size(n))
#Primeiro elemento do vetor;
print(n[0])
#Último elemento do vetor;
print(n[-1])
#Maior elemento do vetor;
print(max(n))
#Menor elemento do vetor;
print(min(n))
#Soma dos elementos do vetor;
print(sum(n))
#Média aritmética dos elementos do vetor, com até duas casas decimais de precisão.
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 21
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:53:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
n= int(eval(input("numero:")))

print(size(n))

print(n[0])

print(n[-1])

print(max(n))

print(min(n))

print(sum(n))

print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 21
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:54:11) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	n= int(eval(input("numero:")))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 4
    n= int(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:54:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	n = int(eval(input("numero:")))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 4
    n = int(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:54:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	
	n = int(eval(input("numero:")))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 5
    n = int(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:55:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	
	n =eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 5
    n =eval(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:55:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	
	n =eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- EXECUTION TIME:
0.159351
-- ERROR:
  File "/home/codebench/codes/1756/674/main.py", line 5
    n =eval(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:55:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	
	n =eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 5
    n =eval(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:55:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
	
	n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 5
    n = eval(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:56:01) 
-- CODE:
from numpy import*
n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 12
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:56:06) 
-- CODE:
	from numpy import*
n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 1
    from numpy import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:56:44) 
-- CODE:

from numpy import*

n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
		
		
-- ERROR:
File "XXXX", line 14
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:00) 
-- CODE:

from numpy import*

n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round(sum(n)/size(n),2)
-- ERROR:
File "XXXX", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:47) 
-- CODE:

from numpy import*

n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round((sum(n)/size(n)),2)
-- ERROR:
File "XXXX", line 12
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:58:22) 
-- CODE:

from numpy import*

n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round((sum(n)/size(n)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:58:57) 
-- CODE:

from numpy import*

n = eval(input("numero:"))
print(size(n))
print(n[0])
print(n[-1])
print(max(n))
print(min(n))
print(sum(n))
print(round((sum(n)/size(n)),2))
-- EXECUTION TIME:
0.431782
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
